chore(docs): Add hook documentation + cleanup

--- a/apps/docs/content/faq.mdx
+++ b/apps/docs/content/faq.mdx
@@ -33,17 +33,20 @@ Yes, Asgardian can be used with React and other frameworks. You can integrate it
 
 ### Can I define dynamic rules with Asgardian?
 
-Yes, Asgardian allows you to define dynamic rules based on various factors such as user properties, resource states, or external conditions. Refer to the [Advanced Usage](/docs/advanced-usage) section for more details.
+Yes, Asgardian allows you to define dynamic rules based on various factors such as user properties, resource states, or external conditions.
+{/* Refer to the [Advanced Usage](/docs/advanced-usage) section for more details. */}
 
 ### Can I integrate Asgardian with a database?
 
-Yes, Asgardian can be integrated with databases to store and manage permission rules dynamically. Refer to the [Advanced Usage](/docs/advanced-usage) section for examples.
+Yes, Asgardian can be integrated with databases to store and manage permission rules dynamically.
+{/* Refer to the [Advanced Usage](/docs/advanced-usage) section for examples. */}
 
 ## Performance Questions
 
 ### How can I optimize Asgardian for performance?
 
-To optimize Asgardian, you can use caching mechanisms to reduce the number of function calls and improve performance. Refer to the [Advanced Usage](/docs/advanced-usage) section for tips and examples.
+To optimize Asgardian, you can use caching mechanisms to reduce the number of function calls and improve performance.
+{/* Refer to the [Advanced Usage](/docs/advanced-usage) section for tips and examples. */}
 
 ### What is the recommended way to batch check permissions?
 
@@ -62,7 +65,3 @@ You can contribute to Asgardian by following the guidelines in the [Contributing
 ## Summary
 
 This section answers some of the most frequently asked questions about Asgardian. If you have any more questions, feel free to reach out to the community or check the [GitHub repository](https://github.com/nordic-ui/Asgardian).
-
-> [!TIP]
->
-> For more information and examples, refer to the [Introduction](/) and [Advanced Usage](/docs/advanced-usage) sections.
